--- a/serving/example/cpp_client/CMakeLists.txt
+++ b/serving/example/cpp_client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5.1)
 
-project(HelloWorld C CXX)
+project(MSClient C CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=0)
@@ -12,17 +12,33 @@ find_package(Threads REQUIRED)
 
 # Find Protobuf installation
 # Looks for protobuf-config.cmake file installed by Protobuf's cmake installation.
-set(protobuf_MODULE_COMPATIBLE TRUE)
-find_package(Protobuf CONFIG REQUIRED)
-message(STATUS "Using protobuf ${protobuf_VERSION}")
+option(GRPC_PATH "set grpc path")
+if(GRPC_PATH)
+  set(CMAKE_PREFIX_PATH ${GRPC_PATH})
+  set(protobuf_MODULE_COMPATIBLE TRUE)
+  find_package(Protobuf CONFIG REQUIRED)
+  message(STATUS "Using protobuf ${protobuf_VERSION}, CMAKE_PREFIX_PATH : ${CMAKE_PREFIX_PATH}")
+elseif(NOT GRPC_PATH)
+  if (EXISTS ${grpc_ROOT}/lib64)
+    set(gRPC_DIR "${grpc_ROOT}/lib64/cmake/grpc")
+  elseif(EXISTS ${grpc_ROOT}/lib)
+    set(gRPC_DIR "${grpc_ROOT}/lib/cmake/grpc")
+  endif()
+  add_library(protobuf::libprotobuf ALIAS protobuf::protobuf)
+  add_executable(protobuf::libprotoc ALIAS protobuf::protoc)
+  message(STATUS "serving using grpc_DIR : " ${gRPC_DIR})
+elseif(NOT gRPC_DIR AND NOT GRPC_PATH)
+  message("please check gRPC. If the client is compiled separately，you can use the command: cmake -D GRPC_PATH=xxx")
+  message("XXX is the gRPC installation path")
+endif()
 
 set(_PROTOBUF_LIBPROTOBUF protobuf::libprotobuf)
 set(_REFLECTION gRPC::grpc++_reflection)
-if (CMAKE_CROSSCOMPILING)
-    find_program(_PROTOBUF_PROTOC protoc)
-else ()
-    set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
-endif ()
+if(CMAKE_CROSSCOMPILING)
+  find_program(_PROTOBUF_PROTOC protoc)
+else()
+  set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
+endif()
 
 # Find gRPC installation
 # Looks for gRPCConfig.cmake file installed by gRPC's cmake installation.
@@ -30,14 +46,14 @@ find_package(gRPC CONFIG REQUIRED)
 message(STATUS "Using gRPC ${gRPC_VERSION}")
 
 set(_GRPC_GRPCPP gRPC::grpc++)
-if (CMAKE_CROSSCOMPILING)
-    find_program(_GRPC_CPP_PLUGIN_EXECUTABLE grpc_cpp_plugin)
-else ()
-    set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:gRPC::grpc_cpp_plugin>)
-endif ()
+if(CMAKE_CROSSCOMPILING)
+  find_program(_GRPC_CPP_PLUGIN_EXECUTABLE grpc_cpp_plugin)
+else()
+  set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:gRPC::grpc_cpp_plugin>)
+endif()
 
 # Proto file
-get_filename_component(hw_proto "../ms_service.proto" ABSOLUTE)
+get_filename_component(hw_proto "../../ms_service.proto" ABSOLUTE)
 get_filename_component(hw_proto_path "${hw_proto}" PATH)
 
 # Generated sources
@@ -59,13 +75,13 @@ add_custom_command(
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
 # Targets greeter_[async_](client|server)
-foreach (_target
-        ms_client ms_server)
-    add_executable(${_target} "${_target}.cc"
-            ${hw_proto_srcs}
-            ${hw_grpc_srcs})
-    target_link_libraries(${_target}
-            ${_REFLECTION}
-            ${_GRPC_GRPCPP}
-            ${_PROTOBUF_LIBPROTOBUF})
-endforeach ()
+foreach(_target
+        ms_client)
+  add_executable(${_target} "${_target}.cc"
+          ${hw_proto_srcs}
+          ${hw_grpc_srcs})
+  target_link_libraries(${_target}
+          ${_REFLECTION}
+          ${_GRPC_GRPCPP}
+          ${_PROTOBUF_LIBPROTOBUF})
+endforeach()
