Added crop signature, wip
Added input check

Added SwapRedBlue

--- a/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
@@ -3,6 +3,7 @@ set_property(SOURCE ${_CURRENT_SRC_FILES} PROPERTY COMPILE_DEFINITIONS SUBMODULE
 add_library(kernels-image OBJECT
     auto_contrast_op.cc
     center_crop_op.cc
+    crop_op.cc
     cut_out_op.cc
     decode_op.cc
     equalize_op.cc
@@ -28,6 +29,7 @@ add_library(kernels-image OBJECT
     rescale_op.cc
     resize_bilinear_op.cc
     resize_op.cc
+    swap_red_blue_op.cc
     uniform_aug_op.cc
     resize_with_bbox_op.cc
     random_resize_with_bbox_op.cc
