--- a/tests/ut/cpp/dataset/CMakeLists.txt
+++ b/tests/ut/cpp/dataset/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(DE_UT_SRCS
         common/common.cc
         common/cvop_common.cc
         common/bboxop_common.cc
+        auto_contrast_op_test.cc
         batch_op_test.cc
         bit_functions_test.cc
         storage_container_test.cc
@@ -22,6 +23,7 @@ SET(DE_UT_SRCS
         cut_out_op_test.cc
         datatype_test.cc
         decode_op_test.cc
+        equalize_op_test.cc
         execution_tree_test.cc
         global_context_test.cc
         main_test.cc
@@ -36,6 +38,7 @@ SET(DE_UT_SRCS
         path_test.cc
         project_op_test.cc
         queue_test.cc
+        random_affine_op_test.cc
         random_crop_op_test.cc
         random_crop_with_bbox_op_test.cc
         random_crop_decode_resize_op_test.cc
