--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -193,6 +193,8 @@ if(BUILD_CONVERTER)
             ${LITE_DIR}/src/gllo/common/visit.cc
             ${LITE_DIR}/src/gllo/common/utils.cc
             ${LITE_DIR}/src/gllo/fusion/conv_biasadd_fusion.cc
+            ${LITE_DIR}/src/gllo/fusion/conv_activation_fusion.cc
+            ${LITE_DIR}/src/gllo/fusion/conv_scale_fusion.cc
             )
 endif()
 ### train
