add image2d for depthwise

--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -264,6 +264,8 @@ if (SUPPORT_GPU)
     set(TEST_SRC
             ${TEST_SRC}
             ${TEST_DIR}/ut/stc/runtime/kernel/opencl/matmul_tests.cc
+            ${TEST_DIR}/ut/stc/runtime/kernel/opencl/depthwise_conv2d_tests.cc
+            ${TEST_DIR}/ut/stc/runtime/kernel/opencl/concat_tests.cc
             ${TEST_DIR}/ut/stc/runtime/kernel/opencl/softmax_cl_tests.cc
             )
 endif()
